Sistemato dado, aggiunte casella e pedina con posizionamento e dimensionamento dinamico

--- a/Oca/Oca.csproj
+++ b/Oca/Oca.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="casella.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="dado.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -54,6 +57,9 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="pedina.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
