Dado, casella e pedina genericamente pronte

--- a/Oca/Oca.csproj
+++ b/Oca/Oca.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="gameManager.cs" />
     <Compile Include="pedina.cs">
       <SubType>Component</SubType>
     </Compile>
